--- a/ui/app/globals.css
+++ b/ui/app/globals.css
@@ -15,6 +15,7 @@
   --color-gray-20: #e7e6e8;
   --color-gray-10: #f3f2f4;
 
+  /* Theme sizes */
   --sizes-heading-hero-size: 124px;
   --sizes-heading-hero-lh: 1;
   --sizes-heading-hero-lp: 0.04rem;
@@ -36,6 +37,11 @@
   --sizes-heading-h6-size: 18px;
   --sizes-heading-h6-lh: 1.5;
   --sizes-heading-h6-lp: 0.01rem;
+
+  /* Theme gradients */
+  --gradient-first: #2600fc;
+  --gradient-second: #ff00ea;
+  --gradient-angle: 25deg;
 }
 
 * {
@@ -48,6 +54,20 @@ html,
 body {
   background-color: var(--color-gray-100, #fff);
   color: var(--color-gray-10);
+  font-weight: 400;
+  font-size: var(--body-font-size, 16px);
+  font-weight: var(--body-font-weight, 400);
+  letter-spacing: var(--body-font-spacing, normal);
+  line-height: 1.5;
+  position: relative;
+  max-width: 100vw;
+  overflow-x: hidden;
+}
+
+html,
+body,
+a,
+button {
   font-family: var(
     --font-mabry-pro,
     -apple-system,
@@ -63,14 +83,6 @@ body {
     "Segoe UI Symbol",
     "Noto Color Emoji"
   );
-  font-weight: 400;
-  font-size: var(--body-font-size, 16px);
-  font-weight: var(--body-font-weight, 400);
-  letter-spacing: var(--body-font-spacing, normal);
-  line-height: 1.5;
-  position: relative;
-  max-width: 100vw;
-  overflow-x: hidden;
 }
 
 h1,
@@ -212,6 +224,10 @@ a {
   inset: 0;
   z-index: -1;
   transition: 0.2s ease;
-  background-color: #2600fc;
-  background-image: linear-gradient(25deg, #2600fc, #ff00ea);
+  background-color: var(--gradient-first);
+  background-image: linear-gradient(
+    var(--gradient-angle),
+    var(--gradient-first),
+    var(--gradient-second)
+  );
 }
