--- a/ui/app/(authorized)/quests/[id]/quiz/page.module.css
+++ b/ui/app/(authorized)/quests/[id]/quiz/page.module.css
@@ -174,23 +174,6 @@
   }
 }
 
-.progressFill {
-  background-color: var(--gradient-first);
-  background-image: linear-gradient(
-    var(--gradient-angle),
-    var(--gradient-first),
-    var(--gradient-second)
-  );
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  transition: 300ms transform;
-  transform: scale(0, 1);
-  transform-origin: left top;
-}
-
 .quizStatsContent {
   padding: 24px;
 }
@@ -208,20 +191,6 @@
 
 .inheritWidth {
   width: auto;
-}
-
-.skillImageContainer {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  position: absolute;
-  right: -15px;
-  top: -15px;
-  z-index: 0;
-}
-
-.skillImage {
-  opacity: 0.3;
 }
 
 .statResult {
@@ -254,8 +223,13 @@
 }
 
 .skillsSummaryContainer {
-  display: flex;
-  align-items: flex-start;
+  display: grid;
+  align-items: start;
+  grid-auto-columns: max-content;
+  grid-auto-flow: column;
+  column-gap: 20px;
+  row-gap: 20px;
+  grid-template-rows: max-content;
   overflow-x: auto;
 }
 
