--- a/ui/ui-kit/inputs/styles.module.css
+++ b/ui/ui-kit/inputs/styles.module.css
@@ -1,3 +1,29 @@
+.input {
+  display: block;
+  border-radius: 8px;
+  width: 100%;
+  padding: 0.75rem 0.75rem;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid #ced4da;
+  appearance: none;
+  border-radius: 8px;
+  font-size: 1rem;
+  font-weight: 400;
+  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+
+.input:focus {
+  background-color: #fff;
+  border-color: var(--color-gray-100);
+  outline: 0;
+}
+
+.inputLabel {
+  color: var(--color-gray-10);
+  margin-bottom: 4px;
+}
+
 .textarea {
   display: block;
   border-radius: 8px;
