UI Layout modification to create more mobile-app experience
An initial alpha-version makes focus on mobile viewports adaptation. This commit adds changes to the app layout:

- Remove redundant vertical scroll on the whole app. Even when there was less content than a viewport height
- Fix preparation sliders and quiz sliders upon height. Make them scrollable if content height > viewport height

--- a/ui/app/(authorized)/layout.module.css
+++ b/ui/app/(authorized)/layout.module.css
@@ -1,7 +1,12 @@
+.authorizedLayout {
+  display: grid;
+  grid-template-rows: 80px calc(100vh - 80px - 30px);
+  row-gap: 30px;
+}
+
 .header {
   padding: 15px;
   position: relative;
-  margin-bottom: 32px;
   z-index: 1;
 }
 
