--- a/ui/app/(authorized)/quests/demo/quiz/page.module.css
+++ b/ui/app/(authorized)/quests/demo/quiz/page.module.css
@@ -1,10 +1,10 @@
 .singleQuiz {
   display: grid;
   grid-template-columns: 100%;
-  grid-template-rows: max-content auto 120px;
+  grid-template-rows: calc(100% - 120px) 120px;
   position: relative;
   width: 100%;
-  height: calc(100vh - 80px);
+  height: 100%;
   z-index: 1;
 }
 
@@ -13,8 +13,14 @@
   padding: 0 15px 15px;
 }
 
+.questionContainer {
+  display: grid;
+  grid-template-rows: max-content auto;
+}
+
 .quizContainer {
   background-color: rgba(255, 255, 255, 0.16);
+  overflow-y: auto;
   width: 100%;
   text-align: center;
 }
@@ -37,7 +43,7 @@
 .quizSlide {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  /* justify-content: center; */
   height: 100%;
   overflow-y: auto;
 }
