Adjust authorized layout width and height

--- a/ui/app/(authorized)/layout.module.css
+++ b/ui/app/(authorized)/layout.module.css
@@ -1,6 +1,11 @@
 .authorizedLayout {
   display: grid;
-  grid-template-rows: 80px calc(100vh - 80px - 30px);
+  grid-template-rows: 80px calc(100% - 80px - 30px);
+  grid-template-columns: 100%;
+  /* Mobile browsers have native elements: search bar, bottom panel. 
+   * 90vh is an empirical value to fit into a single screen without scrolling
+   */
+  height: calc(90vh - env(safe-area-inset-top) - env(safe-area-inset-bottom));
   row-gap: 30px;
 }
 
