--- a/ui/app/(authorized)/quests/[id]/preparation/page.module.css
+++ b/ui/app/(authorized)/quests/[id]/preparation/page.module.css
@@ -8,6 +8,11 @@
   z-index: 1;
 }
 
+.title {
+  margin: 0;
+  padding: 0 15px 15px;
+}
+
 .materialsContainer {
   background-color: rgba(255, 255, 255, 0.16);
   height: 100%;
