API integration with Demo quest flow
- Give an access to the authorized contenxt for a demo user
- Save demo user a temporary instance before quiz starts
- Register and save progress of demo user after quest completion

--- a/ui/app/(authorized)/quests/page.module.css
+++ b/ui/app/(authorized)/quests/page.module.css
@@ -16,6 +16,19 @@
   margin-bottom: 36px;
 }
 
+.completionLabel {
+  background-color: var(--gradient-first);
+  background-image: linear-gradient(
+    var(--gradient-angle),
+    var(--gradient-first),
+    var(--gradient-second)
+  );
+  border-radius: 4px;
+  padding: 4px 8px;
+  font-size: 1rem;
+  z-index: 1;
+}
+
 .bgImageWrapper {
   overflow: hidden;
   left: 0;
