Update mechanics of experience accumulation
- Level up when accumulated experience overgrowth level threshold
- Make a pause before displayin a completion modal
- Fool protection: disable answering multiple times on a samee question

--- a/ui/app/globals.css
+++ b/ui/app/globals.css
@@ -156,6 +156,10 @@ button {
   text-decoration: none;
 }
 
+button:disabled {
+  cursor: not-allowed;
+}
+
 .link {
   border-bottom: 1px solid var(--color-gray-50);
 }
