--- a/ui/app/(authorized)/quests/[id]/quiz/page.module.css
+++ b/ui/app/(authorized)/quests/[id]/quiz/page.module.css
@@ -102,6 +102,10 @@
   margin-bottom: 4px;
 }
 
+.currentLevel {
+  display: inline-block;
+}
+
 .levelProgress {
   height: 8px;
   width: 100%;
@@ -129,6 +133,14 @@
   animation-name: pulse-incorrect;
   animation-duration: 0.18s;
   animation-iteration-count: 3;
+  animation-direction: normal;
+  animation-timing-function: ease-out;
+}
+
+.levelUpAnimation {
+  animation-name: pulse-correct;
+  animation-duration: 0.3s;
+  animation-iteration-count: 1;
   animation-direction: normal;
   animation-timing-function: ease-out;
 }
