--- a/ui/app/(authorized)/quests/[id]/quiz/page.module.css
+++ b/ui/app/(authorized)/quests/[id]/quiz/page.module.css
@@ -42,7 +42,6 @@
 .quizSlide {
   display: flex;
   flex-direction: column;
-  /* justify-content: center; */
   height: 100%;
   overflow-y: auto;
 }
@@ -199,7 +198,7 @@
   background-color: rgba(255, 255, 255, 0.16);
   border-radius: 16px;
   box-shadow: 0 3px 8px -1px rgba(0, 0, 0, 0.26);
-  width: 240px;
+  max-width: 240px;
   overflow: hidden;
   position: relative;
   text-align: center;
