--- a/ui/app/(authorized)/quests/page.module.css
+++ b/ui/app/(authorized)/quests/page.module.css
@@ -51,6 +51,7 @@
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-column-gap: 12px;
+  row-gap: 12px;
   align-items: center;
   font-size: 0.85rem;
 }
