Apply UI for loading state on async actions and page transition

--- a/ui/app/(authorized)/quests/page.module.css
+++ b/ui/app/(authorized)/quests/page.module.css
@@ -75,3 +75,12 @@
 .questActionButton {
   width: 100%;
 }
+
+.loadingContainer {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 128px;
+}
