--- a/ui/app/(authorized)/profile/page.module.css
+++ b/ui/app/(authorized)/profile/page.module.css
@@ -76,3 +76,12 @@
   grid-template-rows: max-content;
   overflow-x: auto;
 }
+
+.loadingContainer {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 128px;
+}
