--- a/ui/app/(authorized)/quests/[id]/layout.module.css
+++ b/ui/app/(authorized)/quests/[id]/layout.module.css
@@ -6,3 +6,11 @@
     90vh - 80px - env(safe-area-inset-top) - env(safe-area-inset-bottom)
   );
 }
+
+.loadingContainer {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
