--- a/ui/app/registration/styles.module.css
+++ b/ui/app/registration/styles.module.css
@@ -48,3 +48,12 @@
   padding: 0 15px;
   text-align: center;
 }
+
+.loadingContainer {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 128px;
+}
