--- a/ui/app/(authorized)/quests/page.module.css
+++ b/ui/app/(authorized)/quests/page.module.css
@@ -25,7 +25,10 @@
   );
   border-radius: 4px;
   padding: 4px 8px;
-  font-size: 1rem;
+  font-size: 0.85rem;
+  position: absolute;
+  top: 20px;
+  right: -8px;
   z-index: 1;
 }
 
