--- a/ui/app/globals.css
+++ b/ui/app/globals.css
@@ -15,6 +15,8 @@
   --color-gray-20: #e7e6e8;
   --color-gray-10: #f3f2f4;
 
+  --color-red-10: #dd0000;
+
   /* Theme sizes */
   --sizes-heading-hero-size: 124px;
   --sizes-heading-hero-lh: 1;
