--- a/app/(authorized)/profile/nft/create/creation-stages/profileToImage.module.css
+++ b/app/(authorized)/profile/nft/create/creation-stages/profileToImage.module.css
@@ -3,11 +3,6 @@
   width: 400px;
 }
 
-.header {
-  padding: 15px 15px 48px;
-  text-align: center;
-}
-
 .logo {
   font-family: var(--font-space-grotesk);
   font-weight: 700;
@@ -80,23 +75,32 @@
 }
 
 .skillsSection {
+  min-height: 220px;
   padding: 15px;
+  position: relative;
+}
+
+.skillsSummaryContainer,
+.skillsTitle {
+  position: relative;
+  z-index: 1;
 }
 
 .skillsSummaryContainer {
-  display: grid;
-  align-items: center;
-  grid-template-columns: repeat(2, 180px);
-  grid-template-rows: max-content;
-  column-gap: 12px;
-  row-gap: 12px;
+  margin: 0 auto;
 }
 
-.footer {
+.skillRow {
   display: flex;
   justify-content: space-between;
-  font-size: 16px;
-  margin-top: 32px;
-  padding: 15px;
-  text-align: right;
+  align-items: center;
+  font-size: var(--sizes-heading-h5-size);
+}
+
+.skillRow:not(:last-of-type) {
+  margin-bottom: 12px;
+}
+
+.skillMeasure {
+  font-size: 1rem;
 }
