--- a/app/globals.css
+++ b/app/globals.css
@@ -61,8 +61,9 @@ body {
   font-weight: var(--body-font-weight, 400);
   letter-spacing: var(--body-font-spacing, normal);
   line-height: 1.5;
-  position: relative;
   max-width: 100vw;
+  position: relative;
+  touch-action: none;
 }
 
 html,
