--- a/app/(authorized)/layout.module.css
+++ b/app/(authorized)/layout.module.css
@@ -3,6 +3,8 @@
   grid-template-rows: 80px auto;
   grid-template-columns: 100%;
   row-gap: 30px;
+  max-width: 768px;
+  margin: 0 auto;
 }
 
 .header {
