--- a/ui-kit/modal/modal.module.css
+++ b/ui-kit/modal/modal.module.css
@@ -15,7 +15,7 @@
   top: 0;
 }
 
-.modalContent::before {
+.modal::before {
   content: "";
   display: block;
   height: 4px;
@@ -25,6 +25,11 @@
     var(--gradient-first),
     var(--gradient-second)
   );
+}
+
+.modalContent {
+  max-width: 768px;
+  margin: 0 auto;
 }
 
 .modalHeader {
