Quest preparation content in space pirates LORE

--- a/app/(authorized)/quests/[id]/preparation/page.module.css
+++ b/app/(authorized)/quests/[id]/preparation/page.module.css
@@ -34,6 +34,15 @@
   overflow-y: auto;
 }
 
+.mediaContainer {
+  margin-bottom: 12px;
+  text-align: center;
+}
+
+.mediaContainer img {
+  max-width: 100%;
+}
+
 .materialsSlideVideo {
   width: 100%;
   max-width: 560px;
